--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,4 +1,4 @@
 mountpoints:
   /:
-    url: https://content.da.live/EnsembleSystems/ni/
+    url: https://drive.google.com/drive/folders/1YTKVlsTsDj-vhw6ehLnEQvVK8JLVLEBK
     type: markup
